--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,5 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.open-in-view=true
+
+server.error.include-exception=true
